<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/cityFragment">

    <fragment
        android:id="@+id/navigation_top_news"
        android:name="com.ewind.newsapi.presentation.main.topnews.TopNewsFragment"
        android:label="@string/title_top_news" >
        <argument
            android:name="city"
            app:argType="string"
            android:defaultValue="London" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.ewind.newsapi.presentation.main.news.NewsFragment"
        android:label="@string/title_news" />

    <fragment
        android:id="@+id/cityFragment"
        android:name="com.ewind.newsapi.presentation.main.profile.ProfileFragment"
        android:label="@string/title_profile" >
        <action android:id="@+id/action_fragment_location_to_fragment_forecast"
            app:destination="@+id/navigation_top_news"/>
    </fragment>

</navigation>