<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_logo_dark"
            android:layout_marginTop="@dimen/_50sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_city"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/colorDarkText"
            android:layout_marginTop="@dimen/_30sdp"/>

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/etCity"
            style="@style/SecondaryEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_margin="@dimen/_30sdp"
            android:hint="@string/search_city"
            android:drawablePadding="@dimen/_10sdp"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btn_done"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_margin="@dimen/_30sdp"
            android:text="@string/continue_text"
            app:layout_constraintHorizontal_bias="0.5"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>