<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivUser"
        android:layout_width="@dimen/_44sdp"
        android:layout_height="@dimen/_44sdp"
        app:srcCompat="@drawable/ic_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_15sdp"/>
    <TextView
        android:id="@+id/tvHello"
        style="@style/TextGraphiteBoltStyle.Size12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/ivUser"
        app:layout_constraintTop_toTopOf="@+id/ivUser"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/hello"/>
    <TextView
        android:id="@+id/tvDate"
        style="@style/TextGreenBoltStyle.Size16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/ivUser"
        app:layout_constraintTop_toBottomOf="@+id/tvHello"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/amelia_barlow" />

    <TextView
        android:id="@+id/tvReport"
        style="@style/TextGreenBoltStyle.Size16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivUser"
        app:layout_constraintStart_toStartOf="@+id/ivUser"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/today_s_forecast_report" />

    <include layout="@layout/today_weather_card"
        android:id="@+id/todayCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvReport"/>

    <TextView
        android:id="@+id/tvNext"
        style="@style/TextGreenBoltStyle.Size16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/todayCard"
        app:layout_constraintStart_toStartOf="@+id/ivUser"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/next_forecast" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pull_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNext"
        android:layout_marginTop="@dimen/_10sdp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:splitMotionEvents="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <include layout="@layout/no_data_layout"
        android:id="@+id/noDATA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>